<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="buildit">BUILD IT BIGGER APP</string>
    <string name="xyzreader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

</resources>
