<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/my_nanodegree_apps" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />

    <Button
        style="@style/MyAppPortfolioTheme"
        android:text="@string/spotify"
        android:layout_below="@id/textView"
        android:id="@+id/button"
        />

    <Button
        style="@style/MyAppPortfolioTheme"
        android:text="@string/scores"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        />

    <Button
        style="@style/MyAppPortfolioTheme"
        android:text="@string/library"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        />

    <Button
        style="@style/MyAppPortfolioTheme"
        android:text="@string/buildit"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        />

    <Button
        style="@style/MyAppPortfolioTheme"
        android:text="@string/xyzreader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        />

    <Button
        style="@style/MyAppPortfolioTheme"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:textColor="#FFFFFF"
        android:background="#F44336"
        />
</LinearLayout>
